<resources>
    <string name="app_name" translatable="false">UB in One</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">UB in One</string>
    <string name="nav_header_subtitle" translatable="false">raphael.gleize@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_overview">Home</string>
    <string name="menu_rooms">Free rooms</string>
    <string name="menu_calendar">Calendar</string>
    <string name="select_your_class">Select your class</string>
    <string name="class_picked">Class successfully picked</string>
    <string name="overview">Overview</string>
    <string name="no_course_today">No course</string>
    <string name="cremi" translatable="false">CREMI</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="language">Language</string>

    <string name="french">French</string>
    <string name="english">English</string>
    <string name="type_here">Type here</string>
    <string name="reset_preferences">Reset preferences ?</string>
    <string name="reset">Reset ?</string>
    <string name="about">About</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="do_you_really_want_to_reset">Do you really want to reset the application and its preferences?</string>
    <string name="hold_to_reset">Hold to reset</string>
    <string name="overall">Overall</string>
    <string name="ground_floor">Ground</string>
    <string name="_1st_floor">1st</string>
    <string name="_2nd_floor">2nd</string>
    <string name="free">Free</string>
    <string name="tbd">TBD</string>
    <string name="occupied">Occupied</string>
    <string name="please_note_self_service">Please note: some rooms are not self-service. Please enquire beforehand</string>

    <string-array name="lang">
        <item>@string/english</item>
        <item>@string/french</item>
    </string-array>

</resources>