<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.cremi.CremiFragment">

    <RadioGroup
        android:id="@+id/btn_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/btn_overall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overall" />

        <RadioButton
            android:id="@+id/btn_floor0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ground_floor" />

        <RadioButton
            android:id="@+id/btn_floor1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1st_floor" />

        <RadioButton
            android:id="@+id/btn_floor2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2nd_floor" />

    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_cremi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_group"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="60dp"
        android:orientation="horizontal" />

</RelativeLayout>