<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.rooms.RoomsFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:padding="3dp">
        <!--        android:background="@drawable/itemBackground"-->

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginStart="3dp"
            android:layout_marginBottom="3dp"
            android:contentDescription="@string/free"
            android:src="@drawable/box_free" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="3dp"
            android:text="@string/free"
            android:textColor="@color/free" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginStart="3dp"
            android:layout_marginBottom="3dp"
            android:contentDescription="@string/occupied"
            android:src="@drawable/box_occupied" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="3dp"
            android:text="@string/occupied"
            android:textColor="@color/occupied" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginStart="3dp"
            android:layout_marginBottom="3dp"
            android:contentDescription="@string/tbd"
            android:src="@drawable/box_to_be_determined" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="3dp"
            android:text="@string/tbd"
            android:textColor="@color/TBD" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_rooms"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/text_gallery"
        android:layout_below="@+id/linearLayout"
        android:layout_marginBottom="40dp" />

    <TextView
        android:id="@+id/text_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="60dp"
        android:text="@string/please_note_self_service"
        android:textAlignment="center" />
</RelativeLayout>